<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNews"
    android:background="@color/gray">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:text="@string/new_complaint"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/labelAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/address_label"/>

            <EditText
                android:id="@+id/textAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/text_address"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="20dp"
                android:background="@color/white"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/labelObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/observation_label" />

            <EditText
                android:id="@+id/textObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="20dp"
                android:hint="@string/text_observation"
                android:inputType="textMultiLine|textCapSentences" />

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/ic_action_camera" />

            <ImageView
                android:id="@+id/imageDenuncia"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                app:backgroundTint="@color/blue"/>

        </LinearLayout>
    </ScrollView>




</RelativeLayout>